# zayn

./: CMakeLists.txt  README.md  compile.sh
include/glad/: glad.h
models/blender/models/: casette.blend
src/: buffer.cpp  buffer.h  camera.h  camera_manager.cpp  compile.sh  config.h  data_types.h  dynamic_array.h  entity.cpp  entity.h  glad.c  input.cpp  input.h  main  main.cpp  main2.cpp  memory.cpp  memory.h  mesh.h  model.cpp  model.h  time.cpp  todo.c  zayn.cpp  zayn.h
src/cartridge/: cartridge_code.cpp  intro_cartridge.cpp
src/casette/: casette.cpp  casette.h  intro_casette.cpp
src/components/: components.h
src/managers/: component_manager.cpp  component_manager.h  coordinator.cpp  coordinator.h  entity_manager.cpp  entity_manager.h  event_manager.cpp  event_manager.h  system_manager.cpp  system_manager.h
src/math/: math.h  matrix.h  vector.h
src/renderer/: mesh.cpp  mesh.h  render.cpp  render.h  render_opengl.cpp  render_vulkan.cpp  render_vulkan.h  render_vulkan_2.cpp  render_vulkan_2d.cpp  render_vulkan_3d.cpp  render_vulkan_X.cpp  render_vulkan_new.cpp
src/renderer/shaders/: grid_3d.vert  grid_frag.frag  grid_frag.spv  grid_vert.spv  mesh.frag  quad_frag.frag  quad_frag.spv  quad_texture1_frag.frag  quad_texture1_vert.spv  quad_texture1_vert.vert  quad_vert copy.vert  quad_vert.spv  quad_vert.vert  vkShader_03_frag.frag  vkShader_03_frag.spv  vkShader_03_vert.spv  vkShader_03_vert.vert  vkShader_04_frag.frag  vkShader_04_vert.spv  vkShader_04_vert.vert  vkShader_3d_INIT_pfrag.frag  vkShader_3d_INIT_pfrag.spv  vkShader_3d_INIT_pvert.spv  (+7 more)
(+2 files in other folders)
